--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "id": "d30109d7-fa30-41f9-a0df-b63f427182af",
   "name": "DEV_HelloWorld",
   "publisher": "Henrik Hellstrand",
-  "brief": "",
+  "brief": "test brief",
   "description": "",
   "version": "1.0.0.0",
   "compatibilityId": "1.0.0.0",
