--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "id": "d30109d7-fa30-41f9-a0df-b63f427182af",
-  "name": "DEV_HelloWorld",
+  "name": "SD-SEMINAR",
   "publisher": "Henrik Hellstrand",
   "brief": "test brief",
   "description": "",
@@ -17,7 +17,7 @@
   "platform": "11.0.0.0",
   "application": "11.0.0.0",
   "idRange": {
-    "from": 50100,
-    "to": 50149
+    "from": 123456700,
+    "to": 123456799
   }
 }
